# ai4news

./: .gitignore  Makefile  README.md  pyproject.toml
config/: targets.yaml
skill/: SKILL.md
src/ai4news/: __init__.py  config.py  newsletter.py  scraper.py  server.py  storage.py
tests/: test_config.py  test_integration.py  test_newsletter.py  test_scraper.py  test_server.py  test_storage.py
