[project]
name = "ai4news"
version = "0.1.0"
description = "LinkedIn content aggregation MCP Server + weekly newsletter"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "playwright>=1.50.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
ai4news-server = "ai4news.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai4news"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
